--- a/Clash/mihomo.yaml
+++ b/Clash/mihomo.yaml
@@ -198,4 +198,4 @@ rules:
   - "RULE-SET,geolocation-!cn,PROXY"
   - "RULE-SET,cn_domain,DIRECT"
   - "RULE-SET,cn_ip,DIRECT"
-  - "MATCH,PROXY"
+  - "MATCH,DIRECT"
