--- a/Clash/mihomo.yaml
+++ b/Clash/mihomo.yaml
@@ -27,9 +27,9 @@ rule-providers:
     interval: 86400
     format: yaml
     type: http
-  geolocation-!cn:
-    url: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@meta/geo/geosite/geolocation-!cn.yaml
-    path: ./ruleset/geolocation-!cn.yaml
+  geolocation-cn:
+    url: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@meta/geo/geosite/geolocation-cn.yaml
+    path: ./ruleset/geolocation-cn.yaml
     behavior: domain
     interval: 86400
     format: yaml
@@ -93,6 +93,13 @@ rule-providers:
   steam:
     url: https://testingcf.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.yaml
     path: ./ruleset/steam.yaml
+    behavior: classical
+    interval: 86400
+    format: yaml
+    type: http
+  github:
+    url: https://testingcf.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
+    path: ./ruleset/github.yaml
     behavior: classical
     interval: 86400
     format: yaml
@@ -187,6 +194,7 @@ rules:
   - "RULE-SET,private,DIRECT"
   - "RULE-SET,bing,DIRECT"
   - "RULE-SET,copilot,AIGC"
+  - "RULE-SET,github,PROXY"
   - "RULE-SET,bard,AIGC"
   - "RULE-SET,openai,AIGC"
   - "RULE-SET,claude,AIGC"
@@ -195,7 +203,7 @@ rules:
   - "RULE-SET,telegram_ip,Telegram"
   - "RULE-SET,google_domain,Google"
   - "RULE-SET,google_ip,Google"
-  - "RULE-SET,geolocation-!cn,PROXY"
+  - "RULE-SET,geolocation-cn,DIRECT"
   - "RULE-SET,cn_domain,DIRECT"
   - "RULE-SET,cn_ip,DIRECT"
   - "MATCH,DIRECT"
