--- a/Clash/mihomo.yaml
+++ b/Clash/mihomo.yaml
@@ -20,16 +20,16 @@ rule-providers:
     interval: 86400
     format: yaml
     type: http
-  # google_domain:
-  #   url: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@meta/geo/geosite/google.yaml
-  #   path: ./ruleset/google_domain.yaml
-  #   behavior: domain
-  #   interval: 86400
-  #   format: yaml
-  #   type: http
-  geolocation-cn:
-    url: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@meta/geo/geosite/geolocation-cn.yaml
-    path: ./ruleset/geolocation-cn.yaml
+  google_domain:
+    url: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@meta/geo/geosite/google.yaml
+    path: ./ruleset/google_domain.yaml
+    behavior: domain
+    interval: 86400
+    format: yaml
+    type: http
+  geolocation-!cn:
+    url: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@meta/geo/geosite/geolocation-!cn.yaml
+    path: ./ruleset/geolocation-!cn.yaml
     behavior: domain
     interval: 86400
     format: yaml
@@ -48,13 +48,13 @@ rule-providers:
     interval: 86400
     format: yaml
     type: http
-  # google_ip:
-  #   url: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@meta/geo/geoip/google.yaml
-  #   path: ./ruleset/google_ip.yaml
-  #   behavior: ipcidr
-  #   interval: 86400
-  #   format: yaml
-  #   type: http
+  google_ip:
+    url: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@meta/geo/geoip/google.yaml
+    path: ./ruleset/google_ip.yaml
+    behavior: ipcidr
+    interval: 86400
+    format: yaml
+    type: http
   bing:
     url: https://testingcf.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Bing/Bing.yaml
     path: ./ruleset/bing.yaml
@@ -97,34 +97,6 @@ rule-providers:
     interval: 86400
     format: yaml
     type: http
-  github:
-    url: https://testingcf.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
-    path: ./ruleset/github.yaml
-    behavior: classical
-    interval: 86400
-    format: yaml
-    type: http
-  zhihuads:
-    url: https://testingcf.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ZhihuAds/ZhihuAds.yaml
-    path: ./ruleset/zhihuads.yaml
-    behavior: classical
-    interval: 86400
-    format: yaml
-    type: http 
-  advertising:
-    url: https://testingcf.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Advertising/Advertising.yaml
-    path: ./ruleset/advertising.yaml
-    behavior: classical
-    interval: 86400
-    format: yaml
-    type: http 
-  google:
-    url: https://testingcf.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.yaml
-    path: ./ruleset/google.yaml
-    behavior: classical
-    interval: 86400
-    format: yaml
-    type: http 
 
 proxy-groups:
   - icon: https://testingcf.jsdelivr.net/gh/Orz-3/mini@master/Color/Static.png
@@ -214,19 +186,16 @@ proxy-groups:
 rules:
   - "RULE-SET,private,DIRECT"
   - "RULE-SET,bing,DIRECT"
-  - "RULE-SET,zhihuads,REJECT"
-  - "RULE-SET,advertising,REJECT"
+  - "RULE-SET,cn_domain,DIRECT"
+  - "RULE-SET,cn_ip,DIRECT"
   - "RULE-SET,copilot,AIGC"
-  - "RULE-SET,github,PROXY"
   - "RULE-SET,bard,AIGC"
   - "RULE-SET,openai,AIGC"
   - "RULE-SET,claude,AIGC"
   - "RULE-SET,steam,PROXY"
   - "RULE-SET,telegram_domain,Telegram"
   - "RULE-SET,telegram_ip,Telegram"
-  # - "RULE-SET,google_domain,PROXY"
-  - "RULE-SET,google,Google"
-  - "RULE-SET,geolocation-cn,DIRECT"
-  - "RULE-SET,cn_domain,DIRECT"
-  - "RULE-SET,cn_ip,DIRECT"
-  - "MATCH,DIRECT"
+  - "RULE-SET,google_domain,Google"
+  - "RULE-SET,google_ip,Google"
+  - "RULE-SET,geolocation-!cn,PROXY"
+  - "MATCH,PROXY"
