--- a/Clash/mihomo.yaml
+++ b/Clash/mihomo.yaml
@@ -210,6 +210,10 @@ rules:
   - "RULE-SET,bing,DIRECT"
   - "RULE-SET,cn_domain,DIRECT"
   - "RULE-SET,cn_ip,DIRECT"
+  - "DOMAIN-SUFFIX,pytorch.org,DIRECT"
+  - "DOMAIN-SUFFIX,anaconda.org,DIRECT"
+  - "DOMAIN-SUFFIX,hf-mirror.com,DIRECT"
+  - "DOMAIN-SUFFIX,hf.co,DIRECT"
   - "RULE-SET,copilot,PROXY"
   - "RULE-SET,bard,PROXY"
   - "RULE-SET,openai,PROXY"
