--- a/Clash/mihomo.yaml
+++ b/Clash/mihomo.yaml
@@ -214,6 +214,7 @@ rules:
   - "DOMAIN-SUFFIX,anaconda.org,DIRECT"
   - "DOMAIN-SUFFIX,hf-mirror.com,DIRECT"
   - "DOMAIN-SUFFIX,hf.co,DIRECT"
+  - "DOMAIN-SUFFIX,freeconvert.com,DIRECT"
   - "RULE-SET,copilot,PROXY"
   - "RULE-SET,bard,PROXY"
   - "RULE-SET,openai,PROXY"
