--- a/Clash/mihomo.yaml
+++ b/Clash/mihomo.yaml
@@ -224,6 +224,7 @@ rules:
   - "RULE-SET,private,DIRECT"
   - "RULE-SET,private_ip,DIRECT"
   - "RULE-SET,bing,DIRECT"
+  - "DOMAIN-SUFFIX,linkedin.com,PROXY"
   - "RULE-SET,cn_domain,DIRECT"
   - "RULE-SET,cn_ip,DIRECT"
   - "DOMAIN-SUFFIX,pytorch.org,DIRECT"
@@ -235,6 +236,8 @@ rules:
   - "DOMAIN-SUFFIX,gh-proxy.com,DIRECT"
   - "DOMAIN-SUFFIX,ghfast.top,DIRECT"
   - "DOMAIN-SUFFIX,tailscale.com,DIRECT"
+  - "DOMAIN-SUFFIX,cdfile.org,DIRECT"
+  - "DOMAIN-SUFFIX,btschool.club,DIRECT"
   - "RULE-SET,copilot,PROXY"
   - "RULE-SET,bard,PROXY"
   - "RULE-SET,openai,PROXY"
