--- a/Clash/mihomo.yaml
+++ b/Clash/mihomo.yaml
@@ -1,17 +1,27 @@
 dns:
   enable: true
-  prefer-h3: true
+  prefer-h3: false
   ipv6: false
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
   respect-rules: true
+  listen: 0.0.0.0:1053
+  cache-algorithm: arc
   nameserver:
     # 网络环境文明的话推荐直接使用运营商的DNS服务器 或者 如果知道自己上游就是运营商DNS的情形下就使用
+    # - system
+    # - https://223.5.5.5/dns-query
+    # - https://doh.pub/dns-query
+    - https://cloudflare-dns.com/dns-query
+    - https://dns.google/dns-query
+  default-nameserver:
     - system
-    - https://223.5.5.5/dns-query
-    - https://doh.pub/dns-query
+    - 223.5.5.5
+    - 119.29.29.29
+  direct-nameserver:
+    - system
   proxy-server-nameserver:
-    - https://223.5.5.5/dns-query
+    - https://dns.alidns.com/dns-query
     - https://doh.pub/dns-query
 rule-providers:
   private:
