Add reject rules for specific domains in mihomo.yaml

--- a/Clash/mihomo.yaml
+++ b/Clash/mihomo.yaml
@@ -96,6 +96,9 @@ rules:
   - "RULE-SET,microsoft,DIRECT"
   - "RULE-SET,bing,DIRECT"
   - "DOMAIN-SUFFIX,linkedin.com,PROXY"
+  - "DOMAIN-SUFFIX,adobe.io,REJECT"
+  - "DOMAIN-SUFFIX,hstatic.io,REJECT"
+  - "DOMAIN-SUFFIX,adobestats.io,REJECT"
   - "RULE-SET,cn_domain,DIRECT"
   - "RULE-SET,cn_ip,DIRECT"
   - "DOMAIN-SUFFIX,pytorch.org,DIRECT"
